cluster/openshell/openshell-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshell
  annotations:
    argocd.argoproj.io/sync-wave: '-4'
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
